fix explain for _id lookup SERVER-468